--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
                 <br>
                 <button class="button" type="button" id="loginbtn" onclick="MyFunction()"> Ingresar </button>
             </form>
+            <div class="g-signin2" data-onsuccess="onSignIn"></div>
             <p class="mb-0">.</p>
         </div>
     </div>
@@ -79,6 +80,8 @@
     <script src="pag/js/init.js"></script>
     <script src="pag/js/login.js"></script>
 
+    <!-- JavaScript OAuth Google -->
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
 
 </body>
 
