--- a/login.html
+++ b/login.html
@@ -73,7 +73,7 @@
             </form>
             
             <!--OAuth Google -->
-    <div class="g-signin2" data-onsuccess="onSignIn">
+    <div class="g-signin2" class="button" data-onsuccess="onSignIn">
         <meta name="google-signin-client_id" content="emercado-jap.apps.googleusercontent.com">
     </div>
     <script src="https://apis.google.com/js/platform.js" async defer></script>
