--- a/login.html
+++ b/login.html
@@ -72,7 +72,7 @@
                 <button class="button" type="button" id="loginbtn" onclick="MyFunction()"> Ingresar </button>
             </form>
             <!--OAuth Google -->
-            <div class="g-signin2" data-onsuccess="onSignIn" style="display: inline-table;>
+            <div class="g-signin2" data-onsuccess="onSignIn" style="display: inline-table">
                 <meta name="google-signin-client_id" content="emercado-jap.apps.googleusercontent.com">
             </div>
             <script src="https://apis.google.com/js/platform.js" async defer></script>
