--- a/login.html
+++ b/login.html
@@ -6,7 +6,6 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
-    <meta name="google-signin-client_id" content="emercado-jap.apps.googleusercontent.com">
     <title>eMercado - Todo lo que busques está aquí</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/album/">
@@ -37,6 +36,10 @@
             background-color: #f5f5f5;
         }
         
+        .g-signin2 {
+            margin: auto;
+        }
+        
         .signin {
             width: 100%;
             max-width: 330px;
@@ -49,8 +52,8 @@
             border: none;
             margin: 1em 0;
             color: white;
-            padding: 0.5em;
-            width: 11%;
+            padding: 1em;
+            width: 15%;
             font-size: 1em;
             font-weight: bold;
         }
@@ -73,7 +76,8 @@
                 <button class="button" type="button" id="loginbtn" onclick="MyFunction()"> Ingresar </button>
             </form>
             <!--OAuth Google -->
-            <div class="g-signin2" data-onsuccess="onSignIn" style="display: inline-table">
+            <div class="g-signin2" data-onsuccess="onSignIn">
+                <meta name="google-signin-client_id" content="emercado-jap.apps.googleusercontent.com">
             </div>
             <script src="https://apis.google.com/js/platform.js" async defer></script>
             <p class="mb-0">.</p>
