--- a/products.html
+++ b/products.html
@@ -23,7 +23,6 @@
             <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
             <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
             <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
-            <p id="logged" class="py-2 d-none d-md-inline-block username"> </p>
         </div>
     </nav>
     <main role="main" class="pb-5">
@@ -36,13 +35,13 @@
                 <div class="col text-right">
                     <div class="btn-group btn-group-toggle mb-4" data-toggle="buttons">
                         <label class="btn btn-light active" id="sortAsc">
-                          <input type="radio" name="options" autocomplete="off" checked>$-$$
+                          <input type="radio" name="options" autocomplete="off" checked>A-Z
                       </label>
                         <label class="btn btn-light" id="sortDesc">
-                          <input type="radio" name="options" autocomplete="off">$$-$
+                          <input type="radio" name="options" autocomplete="off">Z-A
                       </label>
                         <label class="btn btn-light" id="sortByCount">
-                          <input type="radio" name="options" autocomplete="off"><i class="fas fa-sort-amount-down mr-1"></i>Relevancia
+                          <input type="radio" name="options" autocomplete="off"><i class="fas fa-sort-amount-down mr-1"></i>Cant.
                       </label>
                     </div>
                 </div>
@@ -52,7 +51,7 @@
                 <div class="col-md-6 col-sm-12 mb-1 container">
                     <div class="row container p-0 m-0">
                         <div class="col">
-                            <p class="font-weight-normal text-right my-2">Precio</p>
+                            <p class="font-weight-normal text-right my-2">Cant.</p>
                         </div>
                         <div class="col">
                             <input class="form-control" type="number" placeholder="min." id="rangeFilterCountMin">
