--- a/products.html
+++ b/products.html
@@ -36,12 +36,12 @@
                 <div class="col text-right">
                     <div class="btn-group btn-group-toggle mb-4" data-toggle="buttons">
                         <label class="btn btn-light active" id="sortAsc">
-                          <input type="radio" name="options" autocomplete="off" checked>$-$$
+                          <input type="radio" name="options" autocomplete="off" checked >$-$$
                       </label>
                         <label class="btn btn-light" id="sortDesc">
                           <input type="radio" name="options" autocomplete="off">$$-$
                       </label>
-                        <label class="btn btn-light" id="sortByCount">
+                        <label class="btn btn-light" id="sortByCost">
                           <input type="radio" name="options" autocomplete="off"><i class="fas fa-sort-amount-down mr-1"></i>Relevancia
                       </label>
                     </div>
@@ -55,14 +55,14 @@
                             <p class="font-weight-normal text-right my-2">Precio</p>
                         </div>
                         <div class="col">
-                            <input class="form-control" type="number" placeholder="min." id="rangeFilterCountMin">
+                            <input class="form-control" type="number" placeholder="min." id="rangeFilterCostMin">
                         </div>
                         <div class="col">
-                            <input class="form-control" type="number" placeholder="máx." id="rangeFilterCountMax">
+                            <input class="form-control" type="number" placeholder="máx." id="rangeFilterCostMax">
                         </div>
                         <div class="col-3 p-0">
                             <div class="btn-group" role="group">
-                                <button class="btn btn-light btn-block" id="rangeFilterCount">Filtrar</button>
+                                <button class="btn btn-light btn-block" id="rangeFilterCost">Filtrar</button>
                                 <button class="btn btn-link btn-sm" id="clearRangeFilter">Limpiar</button>
                             </div>
                         </div>
