--- a/login.html
+++ b/login.html
@@ -70,7 +70,7 @@
                 <p class="alertmsg" id="alertuser"></p>
                 <input class="campos" id="loginpass" type="password" name="password" maxlength="20" minlength="8" placeholder="Contraseña" />
                 <p class="alertmsg" id="alertpass"></p>
-                <button class="button" type="button" id="loginbtn" onclick="MyFunction()"> Ingresar </button>
+                <button class="button" type="button" id="loginbtn" onclick="Ingresar()"> Ingresar </button>
             </form>
             <!--OAuth Google -->
             <div class="g-signin2" data-onsuccess="onSignIn" style="display: inline-table">
