--- a/products.html
+++ b/products.html
@@ -67,6 +67,9 @@
                             </div>
                         </div>
                     </div>
+                    <div class="row container p-0 m-0">
+                        <input class="form-control" type="text" placeholder="Realizar una búsqueda" id="busqueda">
+                    </div>
                 </div>
             </div>
             <div class="row">
