--- a/product-info.html
+++ b/product-info.html
@@ -10,6 +10,7 @@
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/album/">
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
@@ -26,14 +27,33 @@
             <p id="logged" class="py-2 d-none d-md-inline-block username"> </p>
         </div>
     </nav>
-    <div class="container p-5">
-        <div class="alert alert-danger" role="alert" style="position: relative; width:auto; top: 0;">
-            <h4 class="alert-heading">¡A trabajar! :)</h4>
-            <p>Esta sección corresponde a: Entrega 3 (Fecha de entrega: 13/09/2020) y Entrega 4 (Fecha de entrega: 20/09/2020).</p>
-            <hr>
-            <p class="mb-0">Para saber qué debes hacer, fijate en la actividad en CREA correspondiente a esta entrega.</p>
+
+
+    <div class="container" style="margin-top: 50px;">
+        <div class="list-group">
+            <div class="row" id="prod-container">
+            </div>
         </div>
     </div>
+
+    <div class="text-center p-4">
+        <p class="lead">Comentarios</p>
+    </div>
+
+    <div class="container">
+        <div class="list-group">
+            <div class="row" id="comments-container">
+            </div>
+        </div>
+    </div>
+
+    <div class="container" style="margin-top: 50px;">
+        <div class="list-group">
+            <div class="row" id="new-comments-container">
+            </div>
+        </div>
+    </div>
+
     <footer class="text-muted">
         <div class="container">
             <p class="float-right">
