--- a/product-info.html
+++ b/product-info.html
@@ -48,9 +48,39 @@
     </div>
 
     <div class="container" style="margin-top: 50px;">
-        <div class="list-group">
-            <div class="row" id="new-comments-container">
+        <div class="list-group" id="addcomment">
+            <button class="btn btn btn-dark" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample"> Ingrese su comentario </button>
+            <br>
+            <div class="collapse" id="collapseExample">
+                <div class="card card-body">
+                    <form>
+                        <!--Nuevo boton
+                        <input type="radio" name="stars" value="1" /> <span class="fa fa-star checked"></span>
+                        <input type="radio" name="stars" value="2" /> <span class="fa fa-star checked"></span> <span class="fa fa-star checked"></span>
+                        <input type="radio" name="stars" value="3" /> <span class="fa fa-star checked"></span> <span class="fa fa-star checked"></span> <span class="fa fa-star checked"></span>
+                        <input type="radio" name="stars" value="4" /> <span class="fa fa-star checked"></span> <span class="fa fa-star checked"></span> <span class="fa fa-star checked"></span> <span class="fa fa-star checked"></span>
+                        <input type="radio" name="stars" value="5" /> <span class="fa fa-star checked"></span> <span class="fa fa-star checked"></span> <span class="fa fa-star checked"></span> <span class="fa fa-star checked"></span> <span class="fa fa-star checked"></span>-->
+                        <!--Nuevo boton
+                        <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+                            <div class="btn-group mr-2" role="group" aria-label="First group">
+                                <button id="1s" type="button" class="btn btn-secondary">1</button>
+                                <button id="2s" type="button" class="btn btn-secondary">2</button>
+                                <button id="3s" type="button" class="btn btn-secondary">3</button>
+                                <button id="4s" type="button" class="btn btn-secondary">4</button>
+                                <button id="5s" type="button" class="btn btn-secondary">5</button>
+                            </div>
+                        </div>-->
+                        <input type="number" id="ns" placeholder="Calificacion" />
+                        <p id="as" class="alertmessage"></p>
+                        <input id="nc" placeholder="Deja aqui tu comentario del producto" style="height: 100px; width: 100%;" />
+                        <p id="ac" class="alertmessage"></p>
+                        <a onclick="newComment()" class="btn btn-dark" id="new-comment-bttn"> Enviar </a>
+                    </form>
+                </div>
             </div>
+        </div>
+        <div class="alert-success">
+            <p id="commentok"></p>
         </div>
     </div>
 
