--- a/product-info.html
+++ b/product-info.html
@@ -80,6 +80,18 @@
         </div>
     </div>
 
+    <!-- Productos relacionados -->
+    <div class="text-center p-4">
+        <p class="lead">Productos relacionados</p>
+    </div>
+
+    <div class="container">
+        <div class="list-group">
+            <div class="row" id="relatedProducts-container">
+            </div>
+        </div>
+    </div>
+
     <footer class="text-muted">
         <div class="container">
             <p class="float-right">
