--- a/product-info.html
+++ b/product-info.html
@@ -60,11 +60,11 @@
                         <!--categorias-->
                         <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
                             <div class="btn-group mr-2" role="group" aria-label="First group" id="ns">
-                                <button value="1" id="1s" type="button" class="btn btn-secondary stars">1</button>
-                                <button value="2" id="2s" type="button" class="btn btn-secondary stars">2</button>
-                                <button value="3" id="3s" type="button" class="btn btn-secondary stars">3</button>
-                                <button value="4" id="4s" type="button" class="btn btn-secondary stars">4</button>
-                                <button value="5" id="5s" type="button" class="btn btn-secondary stars">5</button>
+                                <button value="1" type="button" class="btn btn-secondary stars">1</button>
+                                <button value="2" type="button" class="btn btn-secondary stars">2</button>
+                                <button value="3" type="button" class="btn btn-secondary stars">3</button>
+                                <button value="4" type="button" class="btn btn-secondary stars">4</button>
+                                <button value="5" type="button" class="btn btn-secondary stars">5</button>
                             </div>
                         </div>
                         <p id="as" class="alertmessage"></p>
@@ -76,9 +76,13 @@
                 </div>
             </div>
         </div>
-        <div class="alert-success">
+        <div class="alert-success .text-center">
             <p id="commentok"></p>
         </div>
+        <div>
+            <p id="another-comment"></p>
+        </div>
+
     </div>
 
     <!-- Productos relacionados -->
