--- a/sell.html
+++ b/sell.html
@@ -40,8 +40,16 @@
             <a class="py-2 d-none d-md-inline-block" href="categories.html">Categorías</a>
             <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
             <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
-            <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
-            <p id="logged" class="py-2 d-none d-md-inline-block username"> </p>
+            <div class="dropdown show">
+                <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink logged" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="background-color: rgb(52,58,64); color:  rgb(214,28,108); border-color: rgb(52,58,64); font-weight: bold; text-align: center;">
+                    <span id="logged"></span> </a>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                    <a class="dropdown-item" href="cart.html">Ver mi carrito</a>
+                    <a class="dropdown-item" href="my-profile.html">Mi perfil</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" onclick="olvidarUsuario()" href="login.html">Cerrar sesión</a>
+                </div>
+            </div>
         </div>
     </nav>
     <div class="container">
