--- a/cart.html
+++ b/cart.html
@@ -41,7 +41,7 @@
             <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
             <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
             <div class="dropdown show">
-                <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink logged" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="background-color: rgb(52,58,64); color:  rgb(214,28,108); border-color: rgb(52,58,64); font-weight: bold; text-align: center;">
+                <a class="btn btn-secondary dropdown-toggle logged" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <span id="logged"></span> </a>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                     <a class="dropdown-item" href="cart.html">Ver mi carrito</a>
@@ -52,14 +52,121 @@
             </div>
         </div>
     </nav>
-    <div class="container p-5">
-        <div class="alert alert-danger" role="alert" style="position: relative; width:auto; top: 0;">
-            <h4 class="alert-heading">¡A trabajar! :)</h4>
-            <p>Esta sección corresponde a: Entrega 5 (Fecha de entrega: 11/10/2020) y Entrega 6 (Fecha de entrega: 25/10/2020).</p>
-            <hr>
-            <p class="mb-0">Para saber qué debes hacer, fijate en la actividad en CREA correspondiente a esta entrega.</p>
+
+    <main role="main" class="pb-5">
+        <div class="text-center p-4">
+            <h2>Carrito</h2>
+            <p class="lead">Verás aquí todos los productos incluidos en tu carrito de compras.</p>
         </div>
-    </div>
+
+        <!--Listado de productos en carrito-->
+        <div class="container">
+            <div class="list-group" id="cart-list-container">
+            </div>
+        </div>
+
+        <!--Subtotal productos-->
+        <div class="container" style="margin-top: 20px;">
+            <div class="row">
+                <div class="col-9">
+                </div>
+                <div class="col-3">
+                    <p>Subtotal: xxx</p>
+                </div>
+            </div>
+        </div>
+
+        <!--Envio-->
+        <div class="container" style="margin-top: 20px;">
+            <div class="row">
+                <div class="col-9">
+                </div>
+                <div class="col-3">
+                    <p class="lead">ENVIO</p>
+                    <input class="form-control" type="text" placeholder="Ingrese la direccion de envio" id="dir">
+                    <form>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="premium" id="premium">
+                            <label class="form-check-label" for="premium">
+                                Premium (2-5 días)<br> Costo del 15% sobre el subtotal 
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="express" id="express">
+                            <label class="form-check-label" for="express">
+                                Express (5-8 días)<br> Costo del 7% sobre el subtotal  
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="standard" id="standard">
+                            <label class="form-check-label" for="standard">
+                                Standard (12 a 15 días)<br> Costo del 5% sobre el subtotal
+                            </label>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+
+        <!--Total-->
+        <div class="container" style="margin-top: 20px;">
+            <div class="row">
+                <div class="col-9">
+                </div>
+                <div class="col-3">
+                    <p>Total: xxx</p>
+                </div>
+            </div>
+        </div>
+
+        <!--Forma de pago-->
+        <div class="container" style="margin-top: 20px;">
+            <div class="row">
+                <div class="col-9">
+                </div>
+                <div class="col-3">
+                    <p class="lead">METODO DE PAGO</p>
+                    <form>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="premium" id="premium">
+                            <label class="form-check-label" for="premium">
+                                Tarjeta de credito 
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="express" id="express">
+                            <label class="form-check-label" for="express">
+                                Transferencia bancaria  
+                            </label>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+
+        <!--Finalizar compra-->
+        <div class="container" style="margin-top: 20px;">
+            <div class="row">
+                <div class="col-9">
+                </div>
+                <div class="col-3">
+                    <p class="alertmsg" id="alertpass"></p>
+                    <button class="button btn btn-dark" type="button" id="comprarbtn" onclick=""> Comprar </button>
+                </div>
+            </div>
+        </div>
+
+    </main>
+    <footer class="text-muted bg-light">
+        <div class="container">
+            <p class="float-right">
+                <a href="#">Volver arriba</a>
+            </p>
+            <p>Este sitio forma parte de Desarrollo Web - JAP - 2020</p>
+            <p>Clickea <a target="_blank" href="Letra.pdf">aquí</a> para descargar la letra del obligatorio.</p>
+        </div>
+    </footer>
+
     <div id="spinner-wrapper">
         <div class="lds-ring">
             <div></div>
