--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
             <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
             <div class="dropdown show">
-                <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink logged" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="background-color: rgb(52,58,64); color:  rgb(214,28,108); border-color: rgb(52,58,64); font-weight: bold; text-align: center;">
+                <a class="btn btn-secondary dropdown-toggle logged" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <span id="logged"></span> </a>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                     <a class="dropdown-item" href="cart.html">Ver mi carrito</a>
@@ -32,7 +32,6 @@
                     <a class="dropdown-item" onclick="olvidarUsuario()" href="login.html">Cerrar sesión</a>
                 </div>
             </div>
-        </div>
         </div>
     </nav>
     <main role="main">
