--- a/cart.html
+++ b/cart.html
@@ -59,99 +59,103 @@
             <p class="lead">Verás aquí todos los productos incluidos en tu carrito de compras.</p>
         </div>
 
-        <!--Listado de productos en carrito-->
-        <div class="container">
-            <div class="list-group" id="cart-list-container">
-            </div>
-        </div>
+        <div class="row justify-content-md-center">
+            <div class="col-md-8 order-md-1">
+                <!--Listado de productos en carrito-->
+                <div class="container">
+                    <div class="list-group" id="cart-list-container">
+                    </div>
+                </div>
 
-        <!--Subtotal productos-->
-        <div class="container" style="margin-top: 20px;">
-            <div class="row">
-                <div class="col-9">
+                <!--Subtotal productos-->
+                <div class="container" style="margin-top: 20px;">
+                    <div class="row">
+                        <div class="col-12 col-md-8">
+                        </div>
+                        <div class="col-12 col-md-4">
+                            <p class="bold">Subtotal: xxx</p>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-3">
-                    <p>Subtotal: xxx</p>
-                </div>
-            </div>
-        </div>
+                <hr class="mb-4">
 
-        <!--Envio-->
-        <div class="container" style="margin-top: 20px;">
-            <div class="row">
-                <div class="col-9">
+                <!--Envio-->
+                <div class="container" style="margin-top: 20px;">
+                    <div class="row">
+                        <div class="col-12">
+                            <p class="bold text-center">ENVIO</p>
+                        </div>
+                        <div class="col-12 col-md-6">
+                            <p class="bold">Datos para el envio</p>
+                            <input type="text" class="form-control" id="direccion" placeholder="Ingrese la direccion" value="">
+                            <input type="text" class="form-control" id="pais" placeholder="Ingrese el pais" value="">
+                        </div>
+                        <div class="col-12 col-md-2"></div>
+                        <div class="col-12 col-md-4">
+                            <p class="bold">Tipo de envio</p>
+                            <div class="d-block my-3">
+                                <div class="custom-control custom-radio">
+                                    <input id="premium" name="envio" type="radio" class="custom-control-input" required="">
+                                    <label class="custom-control-label" for="premium">Premium (2-5 días) <br> Costo del 15% sobre el subtotal </label>
+                                </div>
+                                <div class="custom-control custom-radio">
+                                    <input id="express" name="envio" type="radio" class="custom-control-input" required="">
+                                    <label class="custom-control-label" for="express">Express (5-8 días)<br> Costo del 7% sobre el subtotal </label>
+                                </div>
+                                <div class="custom-control custom-radio">
+                                    <input id="standard" name="envio" type="radio" class="custom-control-input" required="">
+                                    <label class="custom-control-label" for="standard">Standard (12-15 días) <br> Costo del 5% sobre el subtotal</label>
+                                </div>
+                                <p class="bold" style="margin-top: 20px;">Costo de envio: xxx</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-3">
-                    <p class="lead">ENVIO</p>
-                    <input class="form-control" type="text" placeholder="Ingrese la direccion de envio" id="dir">
-                    <form>
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="premium" id="premium">
-                            <label class="form-check-label" for="premium">
-                                Premium (2-5 días)<br> Costo del 15% sobre el subtotal 
-                            </label>
-                        </div>
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="express" id="express">
-                            <label class="form-check-label" for="express">
-                                Express (5-8 días)<br> Costo del 7% sobre el subtotal  
-                            </label>
-                        </div>
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="standard" id="standard">
-                            <label class="form-check-label" for="standard">
-                                Standard (12 a 15 días)<br> Costo del 5% sobre el subtotal
-                            </label>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
+                <hr class="mb-4">
 
-        <!--Total-->
-        <div class="container" style="margin-top: 20px;">
-            <div class="row">
-                <div class="col-9">
-                </div>
-                <div class="col-3">
-                    <p>Total: xxx</p>
-                </div>
-            </div>
-        </div>
-
-        <!--Forma de pago-->
-        <div class="container" style="margin-top: 20px;">
-            <div class="row">
-                <div class="col-9">
-                </div>
-                <div class="col-3">
-                    <p class="lead">METODO DE PAGO</p>
-                    <form>
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="premium" id="premium">
-                            <label class="form-check-label" for="premium">
-                                Tarjeta de credito 
-                            </label>
+                <!--Forma de pago-->
+                <div class="container" style="margin-top: 20px;">
+                    <div class="row">
+                        <div class="col-12">
+                            <p class="bold text-center">PAGO</p>
                         </div>
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="express" id="express">
-                            <label class="form-check-label" for="express">
-                                Transferencia bancaria  
-                            </label>
+                        <div class="col-12 col-md-8">
+                            <div class="d-block my-3">
+                                <div class="custom-control custom-radio">
+                                    <input id="tarjeta" name="formapago" type="radio" class="custom-control-input" required="">
+                                    <label class="custom-control-label" for="tarjeta">Tarjeta de credito</label>
+                                </div>
+                                <div class="custom-control custom-radio">
+                                    <input id="transferencia" name="formapagopublicationType" type="radio" class="custom-control-input" required="">
+                                    <label class="custom-control-label" for="transferencia">Transferencia bancaria</label>
+                                </div>
+                            </div>
                         </div>
-                    </form>
+                    </div>
                 </div>
-            </div>
-        </div>
+                <hr class="mb-4">
 
-        <!--Finalizar compra-->
-        <div class="container" style="margin-top: 20px;">
-            <div class="row">
-                <div class="col-9">
+                <!--Total-->
+                <div class="container" style="margin-top: 20px;">
+                    <div class="row">
+                        <div class="col-12 col-md-8">
+                        </div>
+                        <div class="col-12 col-md-4">
+                            <p class="bold">Total a pagar: xxx</p>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-3">
-                    <p class="alertmsg" id="alertpass"></p>
-                    <button class="button btn btn-dark" type="button" id="comprarbtn" onclick=""> Comprar </button>
+
+                <!--Finalizar compra-->
+                <div class="container" style="margin-top: 20px;">
+                    <div class="row">
+                        <div class="col-12 col-md-8">
+                        </div>
+                        <div class="col-12 col-md-4">
+                            <p class="alertmsg" id="alertpass"></p>
+                            <button class="button btn btn-dark" type="button" id="comprarbtn" onclick=""> Comprar </button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
