--- a/cart.html
+++ b/cart.html
@@ -73,7 +73,8 @@
                         <div class="col-12 col-md-8">
                         </div>
                         <div class="col-12 col-md-4">
-                            <p class="bold">Subtotal: xxx</p>
+                            <p class="bold">Subtotal: </p>
+                            <p id="subtotal" class="bold"></p>
                         </div>
                     </div>
                 </div>
@@ -88,7 +89,7 @@
                         <div class="col-12 col-md-6">
                             <p class="bold">Datos para el envio</p>
                             <input type="text" class="form-control" id="direccion" placeholder="Ingrese la direccion" value="">
-                            <input type="text" class="form-control" id="pais" placeholder="Ingrese el pais" value="">
+                            <input type="text" class="form-control" id="pais" placeholder="Ingrese el pais" value="" style="margin-top: 20px;">
                         </div>
                         <div class="col-12 col-md-2"></div>
                         <div class="col-12 col-md-4">
@@ -106,7 +107,8 @@
                                     <input id="standard" name="envio" type="radio" class="custom-control-input" required="">
                                     <label class="custom-control-label" for="standard">Standard (12-15 días) <br> Costo del 5% sobre el subtotal</label>
                                 </div>
-                                <p class="bold" style="margin-top: 20px;">Costo de envio: xxx</p>
+                                <p class="bold" style="margin-top: 20px;">Costo de envio:</p>
+                                <p id="costoenvio" class="bold"></p>
                             </div>
                         </div>
                     </div>
@@ -141,7 +143,8 @@
                         <div class="col-12 col-md-8">
                         </div>
                         <div class="col-12 col-md-4">
-                            <p class="bold">Total a pagar: xxx</p>
+                            <p class="bold">Total a pagar:</p>
+                            <p id="total" class="bold"></p>
                         </div>
                     </div>
                 </div>
